# mt5-mcp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  stub.py
.github/workflows/: ci.yml
.grok-plugin/: plugin.json
docs/: HOST_SETUP.md  LIVE_BRIDGE.md  MOCK_VS_LIVE.md
examples/: claude_desktop_config.json  cursor_mcp.json  env.mock.example  grok_config.toml
skills/mt5-mcp/: SKILL.md
src/mt5_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
src/mt5_mcp/backend/: __init__.py  base.py  live.py  mock.py
tests/: test_account_resource.py  test_cli_demo.py  test_deal_history.py  test_mock_backend.py  test_order_stops.py  test_positions_orders.py  test_safety.py  test_server_tools.py  test_status.py  test_symbol_spec.py
