[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt5-mcp"
version = "0.1.0"
description = "MCP server for MetaTrader 5 (mock + live bridge)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MergeOS / ThanhTrucSolutions" }]
dependencies = [
  "mcp>=1.2",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
mt5-mcp = "mt5_mcp.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
